# cmos-region-visualizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: build_exe.bat  run_app.bat
src/cmos_region_visualizer/: __init__.py  app.py  main.py  model.py  plotter.py  schematic.py
tests/: test_model_nmos.py  test_model_pmos.py  test_schematic.py
